Alpine Linux Backend (#1401)
* feat. add all required native libs

* feat. added helper functions

* downgrade cordova version

* feat. added support for x64

* first working implementation

* add missing config

* downgrade cordova version

* fix. internet

* improvements

* fixed stuff

* fix. filesDir not defined

* feat. handle fdroid flavor

* feat. handle fdroid flavor

* fix. stopAxs not working

* fix. foxed stopAxs() and isAxsRunning()

* set home directory

* feat: add "Terminal Home" in acode file browser

Added " Terminal Home " in storage list in acode built in file browser for easy access of terminal files and workflow

* use correct keyboard for process id

* feat. added jsDoc for Terminal api

---------

Co-authored-by: Raunak Raj <71929976+bajrangCoder@users.noreply.github.com>